--- a/index.html
+++ b/index.html
@@ -9,22 +9,42 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 20px;
-            background-color: #f5f5f5;
-            color: #333;
+            background-color: #121212;
+            color: #ffffff;
         }
         h1, h2 {
-            color: #0066ff;
+            color: #0095ff;
         }
         .container {
             max-width: 1200px;
             margin: auto;
-            background: white;
+            background: #1e1e1e;
             padding: 20px;
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        }
+        .search-box {
+            margin-bottom: 20px;
+            padding: 10px;
+            width: 100%;
+            box-sizing: border-box;
+            border: 1px solid #555;
+            border-radius: 4px;
+            background-color: #2d2d2d;
+            color: white;
         }
         .category {
-            margin-bottom: 30px;
+            margin-bottom: 20px;
+        }
+        .category h2 {
+            cursor: pointer;
+        }
+        .category-content {
+            display: none;
+            padding: 10px;
+        }
+        .category.active .category-content {
+            display: block;
         }
         table {
             width: 100%;
@@ -34,25 +54,17 @@
         th, td {
             padding: 12px;
             text-align: left;
-            border-bottom: 1px solid #ddd;
+            border-bottom: 1px solid #555;
         }
         th {
-            background-color: #0066ff;
+            background-color: #0095ff;
             color: white;
         }
         tr:nth-child(even) {
-            background-color: #f2f2f2;
+            background-color: #2d2d2d;
         }
         tr:hover {
-            background-color: #e9e9e9;
-        }
-        .search-box {
-            margin-bottom: 20px;
-            padding: 10px;
-            width: 100%;
-            box-sizing: border-box;
-            border: 1px solid #ddd;
-            border-radius: 4px;
+            background-color: #3c3c3c;
         }
     </style>
 </head>
@@ -100,13 +112,37 @@
                 );
 
                 if (filteredFlags.length > 0) {
-                    let categoryHTML = `<div class="category"><h2>${category}</h2><table><thead><tr><th>Name</th><th>Type</th><th>Value</th><th>Description</th></tr></thead><tbody>`;
+                    let categoryHTML = `
+                        <div class="category">
+                            <h2 onclick="this.parentElement.classList.toggle('active')">${category}</h2>
+                            <div class="category-content">
+                                <table>
+                                    <thead>
+                                        <tr>
+                                            <th>Name</th>
+                                            <th>Type</th>
+                                            <th>Value</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                    `;
 
                     filteredFlags.forEach(flag => {
-                        categoryHTML += `<tr><td>${flag.name}</td><td>${flag.type}</td><td>${flag.value}</td><td>${flag.description}</td></tr>`;
+                        categoryHTML += `
+                            <tr>
+                                <td>${flag.name}</td>
+                                <td>${flag.type}</td>
+                                <td>${flag.value}</td>
+                            </tr>
+                        `;
                     });
 
-                    categoryHTML += `</tbody></table></div>`;
+                    categoryHTML += `
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    `;
                     categoriesDiv.innerHTML += categoryHTML;
                 }
             }
